# gantry

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ticket_damaged.json  ticket_refund_escalate.json
examples/coding/: task_bugfix.json
examples/coding/kb/: coding_assistant_rules.md
examples/crm/: task_hot_lead.json
examples/crm/kb/: sales_playbook.md
examples/finance/: task_invoice.json
examples/finance/kb/: expense_policy.md
examples/fraud/: task_ato.json  task_card_fraud.json  task_clean.json  task_velocity_spike.json
examples/fraud/kb/: fraud_policy.md
examples/guardrail/: task_jailbreak.json  task_pii.json
examples/guardrail/kb/: data_safety.md  guardrail_policy.md
examples/hr/: task_onboarding.json  task_onboarding_approved.json
examples/hr/kb/: onboarding_policy.md
examples/it/: task_access_request.json
examples/it/kb/: access_policy.md
examples/kb/: account_access.md  damaged_items.md
examples/legal/: task_contract_review.json
examples/legal/kb/: contract_policy.md
examples/research/: task_lit_scan.json
examples/research/kb/: research_protocol.md
examples/support/: task_refund_escalate.json  task_replacement.json
examples/support/kb/: refunds.md
src/agent_weaver/: __init__.py  cli.py  generic_agents.py  llm.py  models.py  pattern.py  scenarios.py
src/agentic_harness/: cli.py  generic_agents.py  llm.py  pattern.py  retrieval.py  scenarios.py
src/agentic_harness/patterns/: __init__.py  hitl.py  orchestrator.py  pipeline.py  plan_execute.py  reflection.py  router.py
src/gantry/: __init__.py  cli.py  generic_agents.py  llm.py  memory.py  metrics.py  models.py  orchestration.py  retrieval.py  scenarios.py  triggers.py
src/gantry/patterns/: __init__.py  fraud.py  hitl.py  orchestrator.py  parallel_orchestrator.py  pipeline.py  plan_execute.py  reflection.py  router.py
src/support_weaver/: __init__.py  agents.py  cli.py  llm.py  models.py  policy.py  retrieval.py  workflow.py
tests/: test_bucket1_safety.py  test_bucket2_retrieval.py  test_bucket3_5_llm_protocols.py  test_bucketA_harness_autonomy.py  test_bucketB_memory.py  test_bucketC_autonomy.py  test_claim_weaver.py  test_hitl_langgraph.py  test_reasoning_models.py  test_workflow.py
