[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gantry"
version = "0.4.0"
description = "A multi-pattern agentic AI harness — LangGraph patterns, LangChain LLMs, LlamaIndex RAG, Pydantic v2 models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Joydeb Mondal" }]
keywords = [
  "agentic-ai",
  "agents",
  "langgraph",
  "langchain",
  "llamaindex",
  "pydantic",
  "harness",
  "orchestrator",
  "guardrails",
  "human-in-the-loop",
  "reflection",
  "router",
  "plan-execute",
  "fraud-detection",
  "crm",
  "research",
  "coding-assistants",
]
dependencies = [
    # Data validation & serialisation
    "pydantic>=2.0",
    # Agentic pattern orchestration
    "langgraph>=1.2",
    # LLM abstractions — structured output, prompts, LCEL
    "langchain>=1.3",
    "langchain-core>=1.4",
    "langchain-ollama>=1.1",
    # Vector RAG retrieval with local embeddings
    "llama-index-core>=0.14",
    "llama-index-embeddings-huggingface>=0.4",
]

[project.optional-dependencies]
# Production-grade HITL persistence + scheduled triggers
prod = [
    "langgraph-checkpoint-sqlite",
    "langgraph-checkpoint-postgres",
    "apscheduler>=3.10",
]
# LLM provider extras — install only the one you use
openai    = ["langchain-openai>=0.3"]
gemini    = ["langchain-google-genai>=3.0"]
anthrop   = ["langchain-anthropic>=0.3"]
# All providers bundled
all-providers = [
    "langchain-openai>=0.3",
    "langchain-google-genai>=3.0",
    "langchain-anthropic>=0.3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
gantry = "gantry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
